--- a/pages/education.html
+++ b/pages/education.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Éducation - Youssef Abdmouleh</title>
     
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/education.css">
 </head>
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="../index.html" >Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" active>Éducation</a>
+                        <a class="nav-link" href="education.html">Éducation</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="skills.html">Compétences</a>
@@ -68,7 +68,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     
     <script src="../js/main.js"></script>
     <script src="../js/education.js"></script>
