--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets - Youssef Abdmouleh</title>
     
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/projects.css">
@@ -30,19 +30,10 @@
                         <a class="nav-link" href="/skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/experience.html">Expériences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" active>Projets</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/events.html">Événements</a>
+                        <a class="nav-link" href="project.html">Projets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/quiz.html">Quiz</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -99,7 +90,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     
     <script src="../js/main.js"></script>
     <script src="../js/projects.js"></script>
