--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <link href="../css/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/quiz.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/quiz.css">
    
 </head>
 
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">À propos</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="education.html">Éducation</a>
@@ -32,19 +32,10 @@
                         <a class="nav-link" href="skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="experience.html">Expériences</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="events.html">Événements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" active>Quiz</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="quiz.html" >Quiz</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +59,7 @@
             <p>&copy; 2024 Youssef Abdmouleh. Tous droits réservés.</p>
         </div>
     </footer>
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/quiz.js"></script>
 </body>
 
