--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,13 +27,13 @@
                         <a class="nav-link" href="education.html" >Éducation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/skills.html">Compétences</a>
+                        <a class="nav-link" href="skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="project.html">Projets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/quiz.html">Quiz</a>
+                        <a class="nav-link" href="quiz.html">Quiz</a>
                     </li>
                 </ul>
             </div>
