--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="pages/skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="pages/experiences.html">Expériences</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="pages/projects.html">Projets</a>
                     </li>
                     <li class="nav-item">
