--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="experiences.html">Expériences</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projets</a>
                     </li>
                     <li class="nav-item">
