--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,6 +30,9 @@
                         <a class="nav-link" href="skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="experiences.html">Expériences</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="project.html">Projets</a>
                     </li>
                     <li class="nav-item">
