--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -32,6 +32,9 @@
                         <a class="nav-link" href="skills.html">Compétences</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="experiences.html">Expériences</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projets</a>
                     </li>
                     <li class="nav-item">
