--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     
-    <script src="js/main.js"></script>
-    <script src="js/home.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 </html>
