--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
+    <script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     
     <script src="./js/main.js"></script>
     <script src="./js/home.js"></script>
