--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="./css/experience.css" rel ="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
             <p>&copy; 2024 Youssef Abdmouleh. Tous droits réservés.</p>
         </div>
     </footer>
-    
+        <script src="./js/main.js"></script>    
 </body>
 
 </html>
