--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -64,6 +64,8 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/quiz.js"></script>
+    <script src="./js/main.js"></script>
+
 </body>
 
 </html>
